# mariadb-sequential-partition-manager-py

./: .gitignore  .pre-commit-config.yaml  LICENSE.txt  README.md  Word press  nfpm.yaml  pyproject.toml  setup.cfg  setup.py  wheel2deb.yml
.circleci/: config.yml
.github/workflows/: ci.yml  release.yaml
partitionmanager/: __init__.py  bootstrap.py  bootstrap_test.py  cli.py  cli_test.py  database_helpers.py  database_helpers_test.py  dropper.py  dropper_test.py  migrate.py  migrate_test.py  sql.py  sql_test.py  stats.py  stats_test.py  table_append_partition.py  table_append_partition_test.py  tools.py  tools_test.py  types.py  types_test.py
test_tools/: fake_mariadb.sh
