[metadata]
name = mariadb_sequential_partition_manager
version = 0.3.7
description = Manage DB partitions based on sequential IDs
long_description = file: README.md
long_description_content_type = text/markdown
url = http://github.com/letsencrypt/mariadb-sequential-partition-manager
author = J.C. Jones
author_email = jc@letsencrypt.org
license = MPL-2.0
license_files = LICENSE.txt
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
keywords = database

[options]
packages = partitionmanager
install_requires =
    pyyaml
python_requires = >=3.8
include_package_data = True
zip_safe = False

[options.entry_points]
console_scripts =
    partition-manager=partitionmanager.cli:main

[options.extras_require]
pymysql =
    PyMySQL>=1.0.2
